src/snapshots/indent_s_expr__tests__indent_sexp_directly.snap
---
source: src/lib.rs
expression: "indent_s_expr(r#\"(one (two) (+ 1 :atom) \"string\")\"#, 2)"
---
Ok(
    "(\n  one\n  (\n    two\n  )\n  (\n    +\n    1\n    :atom\n  )\n  string\n)\n",
)
