src/snapshots/indent_s_expr__tests__parse_sexp_addition.snap
---
source: src/lib.rs
expression: "parse_sexp(\"(+ 1 2)\")"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "+",
        },
        Token {
            kind: Symbol,
            range: (
                3,
                4,
            ),
            content: "1",
        },
        Token {
            kind: Symbol,
            range: (
                5,
                6,
            ),
            content: "2",
        },
        Token {
            kind: CloseParen,
            range: (
                6,
                7,
            ),
            content: ")",
        },
    ],
)
