src/snapshots/indent_s_expr__tests__parse_sexp_addition_nested.snap
---
source: src/lib.rs
expression: "parse_sexp(\"(+ 10 (+ 82 43))\")"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "+",
        },
        Token {
            kind: Number,
            range: (
                3,
                4,
            ),
            content: "10",
        },
        Token {
            kind: OpenParen,
            range: (
                6,
                7,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                7,
                8,
            ),
            content: "+",
        },
        Token {
            kind: Number,
            range: (
                9,
                10,
            ),
            content: "82",
        },
        Token {
            kind: Number,
            range: (
                12,
                13,
            ),
            content: "43",
        },
        Token {
            kind: CloseParen,
            range: (
                14,
                15,
            ),
            content: ")",
        },
        Token {
            kind: CloseParen,
            range: (
                15,
                16,
            ),
            content: ")",
        },
    ],
)
