src/snapshots/indent_s_expr__tests__parse_sexp_addition_nested_double.snap
---
source: src/lib.rs
expression: "parse_sexp(\"(+ 10 (+ 22 31) (+ 47 52))\")"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "+",
        },
        Token {
            kind: Number,
            range: (
                3,
                4,
            ),
            content: "10",
        },
        Token {
            kind: OpenParen,
            range: (
                6,
                7,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                7,
                8,
            ),
            content: "+",
        },
        Token {
            kind: Number,
            range: (
                9,
                10,
            ),
            content: "22",
        },
        Token {
            kind: Number,
            range: (
                12,
                13,
            ),
            content: "31",
        },
        Token {
            kind: CloseParen,
            range: (
                14,
                15,
            ),
            content: ")",
        },
        Token {
            kind: OpenParen,
            range: (
                16,
                17,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                17,
                18,
            ),
            content: "+",
        },
        Token {
            kind: Number,
            range: (
                19,
                20,
            ),
            content: "47",
        },
        Token {
            kind: Number,
            range: (
                22,
                23,
            ),
            content: "52",
        },
        Token {
            kind: CloseParen,
            range: (
                24,
                25,
            ),
            content: ")",
        },
        Token {
            kind: CloseParen,
            range: (
                25,
                26,
            ),
            content: ")",
        },
    ],
)
