src/snapshots/indent_s_expr__tests__parse_sexp_addition_nested_doule.snap
---
source: src/lib.rs
expression: "parse_sexp(\"(+ 1 (+ 2 3) (+ 4 5))\")"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                1,
                2,
            ),
            content: "+",
        },
        Token {
            kind: Symbol,
            range: (
                3,
                4,
            ),
            content: "1",
        },
        Token {
            kind: OpenParen,
            range: (
                5,
                6,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                6,
                7,
            ),
            content: "+",
        },
        Token {
            kind: Symbol,
            range: (
                8,
                9,
            ),
            content: "2",
        },
        Token {
            kind: Symbol,
            range: (
                10,
                11,
            ),
            content: "3",
        },
        Token {
            kind: CloseParen,
            range: (
                11,
                12,
            ),
            content: ")",
        },
        Token {
            kind: OpenParen,
            range: (
                13,
                14,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                14,
                15,
            ),
            content: "+",
        },
        Token {
            kind: Symbol,
            range: (
                16,
                17,
            ),
            content: "4",
        },
        Token {
            kind: Symbol,
            range: (
                18,
                19,
            ),
            content: "5",
        },
        Token {
            kind: CloseParen,
            range: (
                19,
                20,
            ),
            content: ")",
        },
        Token {
            kind: CloseParen,
            range: (
                20,
                21,
            ),
            content: ")",
        },
    ],
)
