src/snapshots/indent_s_expr__tests__parse_sexp_empty_nested.snap
---
source: src/lib.rs
expression: "parse_sexp(\"(())\")"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: OpenParen,
            range: (
                1,
                2,
            ),
            content: "(",
        },
        Token {
            kind: CloseParen,
            range: (
                2,
                3,
            ),
            content: ")",
        },
        Token {
            kind: CloseParen,
            range: (
                3,
                4,
            ),
            content: ")",
        },
    ],
)
