src/snapshots/indent_s_expr__tests__parse_sexp_escaping-2.snap
---
source: src/lib.rs
expression: "parse_sexp(r#\"(\\1)\"#)"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Number,
            range: (
                2,
                3,
            ),
            content: "1",
        },
        Token {
            kind: CloseParen,
            range: (
                3,
                4,
            ),
            content: ")",
        },
    ],
)
