src/snapshots/indent_s_expr__tests__parse_sexp_escaping.snap
---
source: src/lib.rs
expression: "parse_sexp(r#\"(\\a)\"#)"
---
Ok(
    [
        Token {
            kind: OpenParen,
            range: (
                0,
                1,
            ),
            content: "(",
        },
        Token {
            kind: Symbol,
            range: (
                2,
                3,
            ),
            content: "a",
        },
        Token {
            kind: CloseParen,
            range: (
                3,
                4,
            ),
            content: ")",
        },
    ],
)
